--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,8 +3,6 @@ name: docker compose CD
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
@@ -23,4 +21,4 @@ jobs:
           git pull
           docker-compose down
           docker-compose build
-          docker-compose up
+          docker-compose up -d
