--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -2,6 +2,6 @@ FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build-env
 WORKDIR /Backend
 COPY . ./
 RUN dotnet publish ApplyInnopolisAPI -c Release -o out
-COPY /ApplyInnopolisAPI/out .
+COPY /out .
 EXPOSE 5208 
-ENTRYPOINT ["./ApplyInnopolisAPI", "--urls", "http://127.0.0.1:5208"]
+ENTRYPOINT dotnet ApplyInnopolisAPI.dll --urls http://0.0.0.0:5000
