--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,25 @@
 services:
-    frontend:
-        build: ./Frontend
-        ports:
-          - 3000:3000
-        network_mode: host
-    postgres:
-      image: postgres:15.3
-      environment:
-        POSTGRES_DB: "ApplyInnopolis"
-        POSTGRES_USER: "applyinnopolisapi"
-        POSTGRES_PASSWORD: "e7Y8F0H9sa3cdvMcBGvW"
-        PGDATA: "/var/lib/postgresql/data/pgdata"
-      volumes:
-        - apply-innopolis-db-data:/var/lib/postgresql/data
+  postgres:
+    image: postgres:15.3
+    environment:
+      POSTGRES_DB: "ApplyInnopolis"
+      POSTGRES_USER: "applyinnopolisapi"
+      POSTGRES_PASSWORD: "e7Y8F0H9sa3cdvMcBGvW"
+      PGDATA: "/var/lib/postgresql/data/pgdata"
+    volumes:
+      - apply-innopolis-db-data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+  frontend:
+      build: ./Frontend
       ports:
-        - "5432:5432"
+        - 3000:3000
+      network_mode: host
+  backend:
+      build: ./Backend
+      ports:
+        - 5000:5000
+      network_mode: host
 
 volumes:
   apply-innopolis-db-data:
