--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -3,5 +3,6 @@ WORKDIR /FWDProject
 COPY . ./
 RUN npm install
 RUN npm i bootstrap-icons
+RUN npm run bild
 EXPOSE 3000
-ENTRYPOINT npm run dev
+ENTRYPOINT npm run start
