--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -3,6 +3,5 @@ WORKDIR /FWDProject
 COPY . ./
 RUN npm install
 RUN npm i bootstrap-icons
-RUN npm run build
 EXPOSE 3000
-ENTRYPOINT npm run start
+ENTRYPOINT npm run dev
