--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,5 +20,4 @@ jobs:
           cd /var/www/FWDProject
           git pull
           docker-compose down
-          docker-compose build
-          docker-compose up -d
+          docker-compose up --build -d
