--- a/Backend/ApplyInnopolisAPI/appsettings.json
+++ b/Backend/ApplyInnopolisAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=ApplyInnopolis;Username=applyinnopolisapi;Password=e7Y8F0H9sa3cdvMcBGvW"
+    "DefaultConnection": "Host=0.0.0.0;Port=5432;Database=ApplyInnopolis;Username=applyinnopolisapi;Password=e7Y8F0H9sa3cdvMcBGvW"
   },
   "Logging": {
     "LogLevel": {
