--- a/Backend/ApplyInnopolisAPI/ApplyInnopolisAPI.csproj
+++ b/Backend/ApplyInnopolisAPI/ApplyInnopolisAPI.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.0-preview" />
     </ItemGroup>
 
     <ItemGroup>
