--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,4 +20,5 @@ jobs:
           cd /var/www/FWDProject
           git pull
           docker-compose down
+          docker images prune
           docker-compose up --build -d
