--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,10 +12,12 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@typescript-eslint/parser": "^6.2.0",
     "bootstrap-icons": "^1.10.5",
-    "eslint": "8.45.0",
+    "eslint": "^8.45.0",
     "eslint-config-next": "13.4.10",
     "next": "13.4.10",
+    "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.32.4",
