--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,11 +14,13 @@
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/parser": "^6.2.0",
     "bootstrap-icons": "^1.10.5",
+    "cookie-cutter": "^0.2.0",
     "eslint": "^8.45.0",
     "eslint-config-next": "13.4.10",
     "next": "13.4.10",
     "prettier": "^3.0.0",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "sharp": "^0.32.4",
     "typescript": "5.1.6"
